logs/Slang/chapter-7/arrays/unpacked/variable-slice.sv.log
name: operations-on-unpacked-arrays-variable-slice-rw
description: Test packed arrays operations support (Variable slice)
should_fail: 0
tags: 7.4.3 7.4.6
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/unpacked/variable-slice.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/unpacked/variable-slice.sv:15:10: error: language feature not yet supported
	arr_a = '{1, 1, 1, 1, 1, 1, 1, 1};
	        ^~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/unpacked/variable-slice.sv:16:10: error: language feature not yet supported
	arr_b = '{0, 0, 0, 0, 0, 0, 0, 0};
	        ^~~~~~~~~~~~~~~~~~~~~~~~~
